--- a/Predict.ipynb
+++ b/Predict.ipynb
@@ -6,352 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install timm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ConvNeXt(\n",
-       "  (downsample_layers): ModuleList(\n",
-       "    (0): Sequential(\n",
-       "      (0): Conv2d(3, 128, kernel_size=(4, 4), stride=(4, 4))\n",
-       "      (1): LayerNorm()\n",
-       "    )\n",
-       "    (1): Sequential(\n",
-       "      (0): LayerNorm()\n",
-       "      (1): Conv2d(128, 256, kernel_size=(2, 2), stride=(2, 2))\n",
-       "    )\n",
-       "    (2): Sequential(\n",
-       "      (0): LayerNorm()\n",
-       "      (1): Conv2d(256, 512, kernel_size=(2, 2), stride=(2, 2))\n",
-       "    )\n",
-       "    (3): Sequential(\n",
-       "      (0): LayerNorm()\n",
-       "      (1): Conv2d(512, 1024, kernel_size=(2, 2), stride=(2, 2))\n",
-       "    )\n",
-       "  )\n",
-       "  (stages): ModuleList(\n",
-       "    (0): Sequential(\n",
-       "      (0): Block(\n",
-       "        (dwconv): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=128)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=128, out_features=512, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=512, out_features=128, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (1): Block(\n",
-       "        (dwconv): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=128)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=128, out_features=512, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=512, out_features=128, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (2): Block(\n",
-       "        (dwconv): Conv2d(128, 128, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=128)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=128, out_features=512, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=512, out_features=128, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "    )\n",
-       "    (1): Sequential(\n",
-       "      (0): Block(\n",
-       "        (dwconv): Conv2d(256, 256, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=256)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=256, out_features=1024, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=1024, out_features=256, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (1): Block(\n",
-       "        (dwconv): Conv2d(256, 256, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=256)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=256, out_features=1024, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=1024, out_features=256, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (2): Block(\n",
-       "        (dwconv): Conv2d(256, 256, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=256)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=256, out_features=1024, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=1024, out_features=256, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "    )\n",
-       "    (2): Sequential(\n",
-       "      (0): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (1): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (2): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (3): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (4): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (5): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (6): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (7): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (8): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (9): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (10): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (11): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (12): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (13): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (14): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (15): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (16): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (17): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (18): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (19): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (20): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (21): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (22): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (23): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (24): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (25): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (26): Block(\n",
-       "        (dwconv): Conv2d(512, 512, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=512)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=512, out_features=2048, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=2048, out_features=512, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "    )\n",
-       "    (3): Sequential(\n",
-       "      (0): Block(\n",
-       "        (dwconv): Conv2d(1024, 1024, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=1024)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=1024, out_features=4096, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=4096, out_features=1024, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (1): Block(\n",
-       "        (dwconv): Conv2d(1024, 1024, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=1024)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=1024, out_features=4096, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=4096, out_features=1024, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "      (2): Block(\n",
-       "        (dwconv): Conv2d(1024, 1024, kernel_size=(7, 7), stride=(1, 1), padding=(3, 3), groups=1024)\n",
-       "        (norm): LayerNorm()\n",
-       "        (pwconv1): Linear(in_features=1024, out_features=4096, bias=True)\n",
-       "        (act): GELU()\n",
-       "        (pwconv2): Linear(in_features=4096, out_features=1024, bias=True)\n",
-       "        (drop_path): Identity()\n",
-       "      )\n",
-       "    )\n",
-       "  )\n",
-       "  (norm): LayerNorm((1024,), eps=1e-06, elementwise_affine=True)\n",
-       "  (head): Sequential(\n",
-       "    (0): Flatten(start_dim=1, end_dim=-1)\n",
-       "    (1): Linear(in_features=1024, out_features=512, bias=True)\n",
-       "    (2): GELU()\n",
-       "    (3): Dropout(p=0.2, inplace=False)\n",
-       "    (4): Linear(in_features=512, out_features=7, bias=True)\n",
-       "    (5): LogSoftmax(dim=1)\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "import torch.utils.data.distributed\n",
     "import torchvision.transforms as transforms\n",
     "from PIL import Image\n",
@@ -362,7 +16,7 @@
     "transform_test = transforms.Compose([\n",
     "    transforms.Resize((224, 224)),\n",
     "    transforms.ToTensor(),\n",
-    "    transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5])\n",
+    "    # transforms.Normalize([0.5, 0.5, 0.5], [0.5, 0.5, 0.5])\n",
     "])\n",
     "\n",
     "DEVICE = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -392,7 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_R = Image.open(r\"D:\\surfa\\Desktop\\20220426_225733.jpg\")\n",
+    "# img_R = Image.open(r\"D:\\surfa\\Desktop\\20220519_232859.jpg\")\n",
+    "img_R = Image.open(r\"D:\\surfa\\Pictures\\5781FB179A177D469C25CA543C1C282A.jpg\")\n",
+    "# img_R = Image.open(r\"D:\\surfa\\Pictures\\1493bd7f69a2ac55.jpg\")\n",
     "img = img_R.convert('RGB')\n",
     "img = transform_test(img)\n",
     "img.unsqueeze_(0)\n",
